# nixos-command

./: .gitignore  README.md  flake.nix  pyproject.toml  shell.nix
nixos_command/: flags.py  main.py  transform.py
