[tool.poetry]
name = "nixos-command"
version = "0.2.1"
description = ""
authors = ["Max <max@privatevoid.net>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nixos = "nixos_command.main:run"